# ipa-template

./: .editorconfig  .gitignore  LICENSE  README.md
.github/workflows/: build.yml
docs/: CI.md  COMPARISON.md  TEMPLATES.md
docs/tutorials/: 01-getting-started.md  02-anatomy-of-a-template.md  03-your-first-feature.md  04-the-networking-layer.md  05-state-and-data-flow.md  06-navigation-and-routing.md  07-persistence-and-storage.md  08-dependency-injection-and-architecture.md  09-testing-your-app.md  10-concurrency-swift6.md  11-design-system-and-accessibility.md  12-platform-deep-dives.md  13-shipping-to-the-app-store.md  14-cicd-github-actions.md  15-capstone-project.md  README.md
scripts/: ci-build.sh
templates/C-Library/: Makefile  README.md
templates/C-Library/docs/: ARCHITECTURE.md  SETUP.md
templates/C-Library/include/: util.h
templates/C-Library/src/: dyn_array.c  status.c  str_util.c  version.c
templates/C-Library/tests/: test_dyn_array.c  test_util.h  (+1 more)
templates/CPlusPlus-Framework/: CMakeLists.txt  Makefile  README.md
templates/CPlusPlus-Framework/docs/: ARCHITECTURE.md  SETUP.md
templates/CPlusPlus-Framework/include/appcore/: event_bus.hpp  result.hpp  task_queue.hpp  version.hpp
templates/CPlusPlus-Framework/src/: event_bus.cpp  version.cpp
templates/CPlusPlus-Framework/tests/: test_appcore.hpp  test_event_bus.cpp  test_result_queue.cpp
templates/Metal/: README.md
templates/ObjectiveC-UIKit/: README.md
templates/ObjectiveCpp-Mixed/: README.md
templates/Swift-SwiftUI/: README.md
templates/Swift-UIKit/: README.md
templates/macOS-AppKit/: README.md
templates/visionOS-RealityKit/: README.md
templates/watchOS-SwiftUI/: README.md
(+123 files in other folders)
